test/phase1/syntaxError/testcase_4right.spl
int main() {
    int a = 0;
    if(a == 0) {
        int a = 1;
    }
    else{
        int a = 2;
    }
    return 0;
}